--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "savvy-starter",
+  "name": "cis-177-practice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "serve": "browser-sync start --server --files '*.html, *.css, *.js'"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gage",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.7",
